--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
           <ul>
-            <li>Главная</li>
-            <li>Магазин</li>
-            <li>Поддержка</li>
+            <li><a href="https://timavio1walt.github.io/111/">Главная</a></li>
+            <li><a href="https://timavio1walt.github.io/3/">Магазин</a></li>
+            <li><a href="https://timavio1walt.github.io/2/">Поддержка</a></li>
           </ul>
         </nav>
     </header>
